# RELIC-Refined-Embeddings-via-Latent-Interaction-Constraints

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.agent/rules/: agents.md  coding-style.md  git-workflow.md  patterns.md  security.md  testing.md
.codex/skills/deep-research-ingest/: SKILL.md
.codex/skills/deep-research-ingest/agents/: openai.yaml
.codex/skills/deep-research-ingest/scripts/: download_papers_from_report.py
.codex/skills/paper-analysis/: SKILL.md
.codex/skills/paper-analysis/agents/: openai.yaml
.codex/skills/research-ideation/: SKILL.md
.codex/skills/research-ideation/agents/: openai.yaml
_agent/: NEXT.md  index.jsonl
_agent/notes/: 20260209T180037Z__scaffold__generic-pipeline-scaffold.md  20260209T184714Z__pipeline__strict-typing-mocked-modes.md  20260209T193213Z__pipeline__ddp-loss-csv-hpc.md  20260211T140754Z__pipeline__logging-csv-local-cpu-e2e.md
configs/: v3.yaml  v4.yaml  v5.yaml  v5_hpo.yaml  v6.yaml
configs/v3/: v3_20260308_002906.yaml
configs/v4/: v4_20260306_133901.yaml
configs/v5/: v5_20260316_121126.yaml
data/PRING/: README.md
docs/: hpo_nas_lite.md
docs/design_patterns/: evaluator.md  logging_overview.md  model.md  pipeline.md  trainer.md
docs/ml_tricks/: 2020_Source_Hypothesis_Transfer.md
docs/skills/: usage.md
logs/v3/: slurm_816403.err  slurm_816416.err  slurm_821206.err
logs/v3/evaluate/20260308_002906/: evaluate.csv
logs/v3/evaluate/20260319/: evaluate.csv
logs/v3/topology_evaluate/20260308_002906/: topology_metrics.csv
logs/v3/train/20260308_002906/: training_step.csv
logs/v4/: slurm_820716.err
logs/v4/evaluate/20260306_133901/: evaluate.csv
logs/v4/train/20260306_133901/: training_step.csv
logs/v5/evaluate/20260316_121126/: evaluate.csv
logs/v5/train/20260316_121126/: training_step.csv
logs/v5/train/20260320_110811_t0000/: training_step.csv
logs/v5/train/20260320_110811_t0002/: training_step.csv
logs/v5/train/opt_unit_opt_t0001/: training_step.csv
scripts/: hpo_optuna.sh  run_pipeline.sh  v3.sh  v4.sh  v5.sh  v5_hpo.sh
src/: __init__.py  run.py
src/adapt/: __init__.py  shot.py
src/embed/: __init__.py  cache.py  config.py  embed.py  esm_client.py  io.py
src/evaluate/: __init__.py  base.py
src/model/: __init__.py  v3.py  v4.py  v5.py  v6.py
src/optimize/: __init__.py  distributed.py  run.py  search_space.py  trial_runner.py
src/optimize/backends/: __init__.py  optuna_backend.py
src/run/: __init__.py  __main__.py  bootstrap.py  pipeline_orchestrator.py  stage_adapt.py  stage_evaluate.py  stage_topology_evaluate.py  stage_topology_finetune.py  stage_train.py
src/topology/: __init__.py  finetune_data.py  finetune_losses.py
src/train/: __init__.py  base.py  config.py  strategies.py
src/train/strategies/: __init__.py  lifecycle.py
src/utils/: __init__.py  config.py  data_io.py  data_io_v6.py  data_samplers.py  device.py  distributed.py  early_stop.py  logging.py  losses.py  ohem_sample_strategy.py
tests/e2e/: test_hpc_pipeline_smoke.py  test_local_pipeline_smoke.py
tests/e2e/artifacts/: v3_hpc.yaml  v3_local_cpu.yaml
tests/integration/: test_logging_artifacts.py  test_optimize_optuna_workflow.py  test_run_pipeline_modes.py  test_run_pipeline_smoke.py  test_topology_finetune_stage.py
tests/unit/: test_adapt_shot.py  test_data_io_embeddings.py  test_data_io_v6.py  test_distributed_utils.py  test_embed_cache.py  test_losses.py  test_ohem_sample_strategy.py  test_optimize_distributed.py  test_optimize_package_init.py  test_optimize_search_space.py  test_optimize_trial_runner.py  test_refactor_compat.py  test_run_logging.py  test_run_model_build.py  test_run_sampling.py  test_topology_finetune.py  test_trainer_evaluator.py
